# compostable-architecture

./: Cargo.toml
src/: effect.rs  lib.rs  reducer.rs  scheduler.rs  store.rs
